--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.1",
     "web3.storage": "^4.2.0",
     "ytdl-core": "^4.11.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.1"
   }
 }
